# create-notion-from-slack

./: README.md  pyproject.toml
sls/: .env.example  handler.py  package-lock.json  package.json  requirements.txt  serverless.yml
